# Kognizance_tool

kvmTest/: CMakeLists.txt  Readme.md
kvmTest/dependencies/: build.sh  build_xed.sh  dl.sh
kvmTest/dependencies/libmonitor/: Makefile  config.h  config.status  libtool
kvmTest/dependencies/libmonitor/src/: .memleak.c.swp  Makefile  libmonitor.la  libmonitor_la-callback.lo  libmonitor_la-dlopen.lo  libmonitor_la-fork.lo  libmonitor_la-main.lo  libmonitor_la-memleak.lo  libmonitor_la-mpi.lo  libmonitor_la-mpi_comm_c.lo  libmonitor_la-mpi_comm_f0.lo  libmonitor_la-mpi_comm_f1.lo  libmonitor_la-mpi_comm_f2.lo  libmonitor_la-mpi_final_c.lo  libmonitor_la-mpi_final_f0.lo  libmonitor_la-mpi_final_f1.lo  libmonitor_la-mpi_final_f2.lo  libmonitor_la-mpi_init_c.lo  libmonitor_la-mpi_init_f0.lo  libmonitor_la-mpi_init_f1.lo  libmonitor_la-mpi_init_f2.lo  libmonitor_la-mpi_init_thread_c.lo  libmonitor_la-mpi_init_thread_f0.lo  libmonitor_la-mpi_init_thread_f1.lo  libmonitor_la-mpi_init_thread_f2.lo  libmonitor_la-pmpi.lo  libmonitor_la-pthread.lo  libmonitor_la-signal.lo  libmonitor_la-utils.lo  memleak.c  monitor-run
kvmTest/dependencies/libmonitor/src/.libs/: libmonitor.lai  libmonitor.so.0.0.0
kvmTest/includes/agent/: agent.hpp
kvmTest/includes/agent/kvmAgent/: kvminterface.hpp  myagent.hpp  symbol.hpp
kvmTest/includes/agent/nativeAgent/: myagent.hpp
kvmTest/includes/agent/pythonAgent/: myagent.hpp  pyBytecodeIterator.hpp  pyagent.hpp  pyagent_stack_unwind.hpp  pyopcode.hpp  symbol.hpp
kvmTest/includes/platform/: context.hpp  platform.hpp
kvmTest/includes/platform/device/: bpDevice.hpp  device.hpp  ebsDevice.hpp  pebsDevice.hpp
kvmTest/includes/platform/misc/: fancyprinting.hpp  logger.hpp
kvmTest/includes/tools/: tool.hpp
kvmTest/includes/tools/sampleEBSTool/: mytool.hpp
kvmTest/includes/tools/samplePEBSBPTool/: mytool.hpp
kvmTest/includes/tools/samplePEBSTool/: mytool.hpp
kvmTest/includes/tools/witchTool/: mytool.hpp
kvmTest/includes/tools/witchTool/watchpoint-lib/: watchpoint.h  watchpoint_mmap.h  watchpoint_util.h
kvmTest/includes/tools/witchTool/witchLogic/: WitchLogic.hpp  deadStore.hpp  dupSpy.hpp  falsesharing.hpp  loadSpy.hpp  redSpy.hpp
kvmTest/src/: main.cpp
kvmTest/src/agent/: agent.cpp
kvmTest/src/agent/kvmAgent/: decoder.cpp  kvminterface.cpp  myagent.cpp  symbol.cpp
kvmTest/src/agent/nativeAgent/: decoder.cpp  myagent.cpp
kvmTest/src/agent/pythonAgent/: libperform.cpp  myagent.cpp  pyBytecodeIterator.cpp  pyagent.cpp  pyagent_on_signal.cpp  pyagent_stack_unwind.cpp  symbol.cpp
kvmTest/src/agent/sampleAgent/: myagent.cpp  session.cpp
kvmTest/src/platform/: platform.cpp
kvmTest/src/platform/device/: bpDevice.cpp  device.cpp  ebsDevice.cpp  pebsDevice.cpp  perf_parser.cpp
kvmTest/src/platform/misc/: logger.cpp
kvmTest/src/tools/sampleEBSTool/: mytool.cpp
kvmTest/src/tools/samplePEBSBPTool/: mytool.cpp
kvmTest/src/tools/samplePEBSTool/: mytool.cpp
kvmTest/src/tools/sampleTool/: mytool.cpp
kvmTest/src/tools/witchTool/: mytool.cpp
kvmTest/src/tools/witchTool/watchpoint-lib/src/: watchpoint.cpp  watchpoint_mmap.cpp
kvmTest/src/tools/witchTool/witchLogic/: WitchLogic.cpp  deadStore.cpp  dupSpy.cpp  falsesharing.cpp  loadSpy.cpp  redSpy.cpp
kvmTest/test/kvm/: .config  Makefile  Readme.md  addr2line.sh  clear.sh  comp_temp  compilerBenchWalk_out.txt  compilerBenchcompile_out.txt  cpVmlinux.sh  dbench_out.txt  dead.txt  deadstore_  dump.sh  filebench_randomwrite.txt  filebench_videserver.txt  filebench_webserver.txt  fio_out.txt  gdb.sh  kill.sh  kvminterface.hpp  mapReduce_LR_RS.txt  page.txt  perf.data.guest  process.sh  red.txt  red_tcp.txt  run.sh  runQemu.sh  sshGuest.sh  test1.c  vmalloc.c
kvmTest/test/kvm/metis/: log_2018-10-16_Metis_deadstore.txt
kvmTest/test/kvm/qemu/: Makefile  kvminterface.hpp  run.sh
kvmTest/test/native/: Makefile  run.sh  test1  test1.c  test2  test2.c
kvmTest/test/native/deadspy/: Makefile  test1  test1.c
kvmTest/test/native/loadspy/: addr2line.sh  dump.sh  test1  test1.c
kvmTest/test/native/test/: test1  test1.c
kvmTest/test/python/: Readme.md  test.py  test_pebs.py
kvmTest/test/python/deadspy/: test.py
